// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`a.js 1`] = `
// @flow
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// @flow

`;

exports[`b.js 1`] = `
/**
 * @flow
 * @providesModule b
 */
require('./a');
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/**
 * @flow
 * @providesModule b
 */
require("./a");

`;

exports[`c.js 1`] = `
// @flow
require('./a.js');
require('b');
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// @flow
require("./a.js");
require("b");

`;
